<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_Main_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/textView_Header"
        android:text="@string/textView_Main_Header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Main_Nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        style="@style/textView_Nama"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Main_Nama"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Photo"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Header" />

    <ImageView
        android:id="@+id/imageView_Main_Photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageView_Main_Photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Header"
        app:srcCompat="@drawable/almaira" />

    <TextView
        android:id="@+id/textView_Main_Umur"
        style="@style/textView_Umur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textView_Main_Umur"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Photo"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Nama" />

    <Button
        android:id="@+id/button_Main_Go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_Main_Go"
        style="@style/button_Main"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Photo"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Umur" />

</androidx.constraintlayout.widget.ConstraintLayout>