<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView_Main2_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Main_Header"
        style="@style/textView_Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Main2_Photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageView_Main2_Photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main2_Header"
        app:srcCompat="@drawable/inara" />

    <TextView
        android:id="@+id/textView_Main2_Nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Main2_Nama"
        style="@style/textView_Nama"
        app:layout_constraintEnd_toStartOf="@+id/imageView_Main2_Photo"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main2_Header" />

    <TextView
        android:id="@+id/textView_Main2_Umur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Main2_Umur"
        style="@style/textView_Umur"
        app:layout_constraintEnd_toStartOf="@+id/imageView_Main2_Photo"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main2_Nama" />

    <Button
        android:id="@+id/button_Main2_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_Main2_Back"
        style="@style/button_Main"
        app:layout_constraintEnd_toStartOf="@+id/imageView_Main2_Photo"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main2_Umur" />
</androidx.constraintlayout.widget.ConstraintLayout>